# adventofcode16_haskell

./: CHANGELOG.md  LICENSE  README.md  adventofcode16-haskell.cabal  default.nix  nixpkgs.json  release.nix
app/: Main.hs
data/: input11b.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  MyLib.hs
