cabal-version:      3.0
name:               adventofcode16-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Benjamin Knopp
maintainer:         benjamin.knopp@uni-marburg.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        MyLib
        , Day01
        , Day02
        , Day03
        , Day04
        , Day05
        , Day06
        , Day07
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.2.1
        , split
        , containers
        , ghc
        , regex-posix
        , regex-pcre
        , sort
        , bytestring
        , cryptonite
    hs-source-dirs:   src
    default-language: Haskell2010
--
executable adventofcode16-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        adventofcode16-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite adventofcode16-haskell-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        adventofcode16-haskell
